Added nginx proxy (#149)
* Added reverse proxy

* Resources instead of file system

* Resources instead of file system

* Updated dependencies

* Fixed condition

* Added TODO